--- a/html/missions.html
+++ b/html/missions.html
@@ -39,7 +39,6 @@
     <div class="missions-toolbar">
       <div class="missions-tabs">
         <button data-tab="all" class="tab-btn active">All Missions</button>
-        <button data-tab="favorites" class="tab-btn">Favorites</button>
         <button data-tab="mine" class="tab-btn">My Missions</button>
       </div>
       <div class="missions-filters">
@@ -68,6 +67,7 @@
   <div class="favorites-sidebar" id="favoritesSidebar">
     <div class="favorites-header">
       <h3>Favorite Missions</h3>
+      <button class="print-favorites" id="printFavorites">🖨️ Print</button>
       <button class="close-favorites" id="closeFavorites">×</button>
     </div>
     <div class="favorites-list" id="favoritesList">
@@ -127,39 +127,43 @@
   </div>
 
   <!-- Modal for creating/editing missions -->
-  <div class="modal" id="missionModal" style="display: none;">
-    <div class="modal-card">
-      <h3 class="modal-title">Mission</h3>
-      <form id="missionForm">
-        <input type="hidden" id="missionId">
-        <div class="form-group">
-          <label for="missionName">Mission Name</label>
-          <input type="text" id="missionName" class="modal-input" placeholder="Mission Name" required>
-        </div>
-        <div class="form-group">
-          <label for="missionAgency">Agency</label>
-          <input type="text" id="missionAgency" class="modal-input" placeholder="Agency" required>
-        </div>
-        <div class="form-group">
-          <label for="missionLaunchDate">Launch Date</label>
-          <input type="date" id="missionLaunchDate" class="modal-input" required>
-        </div>
-        <div class="form-group">
-          <label for="missionObjective">Objective</label>
-          <textarea id="missionObjective" class="modal-input" placeholder="Objective" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-          <label for="missionImage">Image URL</label>
-          <input type="text" id="missionImage" class="modal-input" placeholder="Image URL">
-        </div>
-        <div class="modal-actions">
-          <button type="button" class="modal-cancel">Cancel</button>
-          <button type="submit" class="modal-save">Save</button>
-        </div>
-      </form>
-    </div>
+<!-- Replace only the modal section -->
+<div class="modal" id="missionModal" style="display: none;">
+  <div class="modal-card">
+    <h3 class="modal-title" id="modalTitle">New Mission</h3>
+    <form id="missionForm">
+      <input type="hidden" id="missionId">
+      <div class="form-group">
+        <label for="missionName">Mission Name</label>
+        <input type="text" id="missionName" class="modal-input" placeholder="Enter mission name" required>
+      </div>
+      <div class="form-group">
+        <label for="missionAgency">Agency</label>
+        <input type="text" id="missionAgency" class="modal-input" placeholder="Enter agency" required>
+      </div>
+      <div class="form-group">
+        <label for="missionLaunchDate">Launch Date</label>
+        <input type="date" id="missionLaunchDate" class="modal-input" required>
+      </div>
+      <div class="form-group">
+        <label for="missionObjective">Objective</label>
+        <textarea id="missionObjective" class="modal-input" placeholder="Enter objective" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="missionImage">Image URL</label>
+        <input type="text" id="missionImage" class="modal-input" placeholder="Enter image URL">
+      </div>
+      <div class="modal-actions">
+        <button type="button" class="modal-cancel">Cancel</button>
+        <button type="submit" class="modal-save">Save</button>
+      </div>
+    </form>
   </div>
+</div>
 
-  <script src="/assets/js/missions.js"></script>
+  <!-- Notification System -->
+  <div id="notificationContainer" class="notification-container"></div>
+
+  <script src="../assets/js/missions.js"></script>
 </body>
 </html>
