add screen of planification

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <nav class="navbar-bottom">
       <ul class="nav-links">
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/html/planets.html">Planètes</a></li>
-        <li><a href="/html/missions.html">Missions Spatiales</a></li>
-        <li><a href="/html/about.html">À propos</a></li>
+        <li><a href="./html/planets.html">Planètes</a></li>
+        <li><a href="./html/missions.html">Missions Spatiales</a></li>
+        <li><a href="./html/about.html">À propos</a></li>
       </ul>
       <a class="contact-btn" href="contact.html" aria-label="Contact">Contact Us</a>
     </nav>
